--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@100;400;500;700&family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Roboto:wght@400;500;700&display=swap");
 body {
   font-family: "Roboto", sans-serif;
   color: #8d96bd;
@@ -47,6 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 h1, h2 {
   font-size: 48px;
   margin-bottom: 28px;
+  color: #3d4f9f;
 }
 
 h3 {
@@ -65,6 +66,27 @@ h5 {
 
 .ta-c {
   text-align: center;
+}
+
+.dots {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.dots__item {
+  width: 8px;
+  height: 8px;
+  cursor: pointer;
+  background-color: #d1d6e3;
+  border-radius: 100%;
+  transition: 0.2s;
+}
+.dots__item--active {
+  background-color: #5283ff;
+}
+.dots__item + .dots__item {
+  margin-left: 12px;
 }
 
 .section-header .section-inner {
@@ -144,7 +166,14 @@ h5 {
 }
 
 .section-hero-image {
+  position: relative;
   background-color: #f4f7ff;
+}
+.section-hero-image .dots {
+  position: absolute;
+  bottom: 28px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .slider-hero-image {
@@ -153,14 +182,59 @@ h5 {
   list-style: none;
 }
 .slider-hero-image__item {
-  height: 560px;
+  height: 600px;
   text-align: center;
   background-position: 50% 50%;
+  background-repeat: no-repeat;
   background-size: cover;
 }
+.slider-hero-image__item-content h2 {
+  font-weight: 300;
+}
+.slider-hero-image__item-content h2 span {
+  font-weight: 500;
+}
+.slider-hero-image__item-content .text {
+  width: 60%;
+  margin: 0 auto 20px;
+  line-height: 2;
+}
+
+.icon-play {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 52px;
+  height: 52px;
+  border-radius: 100%;
+  background-color: #fff;
+  box-shadow: 0 10px 50px rgba(201, 209, 231, 0.6);
+}
+.icon-play::before {
+  display: block;
+  width: 0;
+  height: 0;
+  content: "";
+  margin-left: 16px;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 8px 12px;
+  border-left-color: #5e81ff;
+}
+
 .section-customers .section-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.section-customers .section-inner a {
+  opacity: 0.3;
+  transition: 0.2s;
+}
+.section-customers .section-inner a:hover {
+  opacity: 1;
 }
 
 .section-plan-and-manage {
